// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ListItem Rendering Rendering with custom icon 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": undefined,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
    >
      <Icon
        color="#e6e6e6"
        name="check"
        size={20}
        type="light"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
          }
        }
      >
        Read this!
      </Text>
    </View>
  </View>
</View>
`;

exports[`ListItem Rendering Rendering with extra sub label 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": undefined,
          "paddingVertical": 7,
        },
      ]
    }
  >
    <View
      style={
        {
          "marginRight": 16,
        }
      }
    >
      <Icon
        color="#e6e6e6"
        name="circle"
        size={18}
        type="light"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
          }
        }
      >
        Read this!
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": "#939393",
              "fontFamily": "Ubuntu",
              "fontSize": 10,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 16,
            }
          }
        >
          Really!
        </Text>
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": "#939393",
              "fontFamily": "Ubuntu",
              "fontSize": 10,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 16,
            }
          }
        >
          Or not
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`ListItem Rendering Rendering with radio button selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": "#e8f1f8",
          "paddingVertical": 13,
        },
      ]
    }
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
    >
      <Icon
        color="#0066b1"
        name="circle-check"
        size={18}
        type="solid"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
          }
        }
      >
        Read this!
      </Text>
    </View>
  </View>
</View>
`;

exports[`ListItem Rendering Rendering with radio button unselected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": undefined,
          "paddingVertical": 13,
        },
      ]
    }
  >
    <View
      style={
        {
          "marginRight": 8,
        }
      }
    >
      <Icon
        color="#e6e6e6"
        name="circle"
        size={18}
        type="light"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
          }
        }
      >
        Read this!
      </Text>
    </View>
  </View>
</View>
`;

exports[`ListItem Rendering Rendering with sub label 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "paddingHorizontal": 16,
        },
        {
          "backgroundColor": undefined,
          "paddingVertical": 7,
        },
      ]
    }
  >
    <View
      style={
        {
          "marginRight": 16,
        }
      }
    >
      <Icon
        color="#e6e6e6"
        name="circle"
        size={18}
        type="light"
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#212121",
            "fontFamily": "Ubuntu",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "normal",
            "lineHeight": 16,
          }
        }
      >
        Read this!
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": "#939393",
              "fontFamily": "Ubuntu",
              "fontSize": 10,
              "fontStyle": "normal",
              "fontWeight": "normal",
              "lineHeight": 16,
            }
          }
        >
          Really!
        </Text>
      </View>
    </View>
  </View>
</View>
`;
